@@ -16,10 +16,6 @@
 
 package org.opensingular.form.wicket.mapper.maps;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
 import com.google.maps.internal.PolylineEncoding;
 import com.google.maps.model.LatLng;
 import org.apache.commons.collections.CollectionUtils;
@@ -58,35 +54,39 @@ import org.opensingular.lib.wicket.util.util.WicketUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static org.opensingular.lib.wicket.util.util.Shortcuts.$m;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
+import static org.opensingular.lib.wicket.util.util.Shortcuts.*;
 
 public class MarkableGoogleMapsPanel<T> extends BSContainer {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(MarkableGoogleMapsPanel.class);
+    private static final Logger LOGGER       = LoggerFactory.getLogger(MarkableGoogleMapsPanel.class);
     private static final String PANEL_SCRIPT = "MarkableGoogleMapsPanel.js";
 
-    private static final String SINGULAR_GOOGLEMAPS_JS_KEY = "singular.googlemaps.js.key";
+    private static final String SINGULAR_GOOGLEMAPS_JS_KEY     = "singular.googlemaps.js.key";
     private static final String SINGULAR_GOOGLEMAPS_STATIC_KEY = "singular.googlemaps.static.key";
-    public static final String MAP_ID = "map";
-    public static final String MAP_STATIC_ID = "mapStatic";
+    public static final  String MAP_ID                         = "map";
+    public static final  String MAP_STATIC_ID                  = "mapStatic";
     private final LatLongMarkupIds ids;
 
-    private final String singularKeyMaps = SingularProperties.getOpt(SINGULAR_GOOGLEMAPS_JS_KEY).orElse(null);
+    private final String singularKeyMaps      = SingularProperties.getOpt(SINGULAR_GOOGLEMAPS_JS_KEY).orElse(null);
     private final String singularKeyMapStatic = SingularProperties.getOpt(SINGULAR_GOOGLEMAPS_STATIC_KEY).orElse(null);
 
     private final IModel<String> metaDataModel = new Model<>();
     private final boolean visualization;
-    private final SView view;
+    private final SView   view;
 
     private boolean multipleMarkers;
-    private String callbackUrl;
-    private String tableContainerId;
+    private String  callbackUrl;
+    private String  tableContainerId;
 
-    private final Button clearButton;
-    private final Button currentLocationButton;
+    private final Button             clearButton;
+    private final Button             currentLocationButton;
     private final WebMarkupContainer verNoMaps;
-    private final ImgMap mapStatic;
-    private final WebMarkupContainer map = new WebMarkupContainer(MAP_ID);
+    private final ImgMap             mapStatic;
+    private final WebMarkupContainer  map      = new WebMarkupContainer(MAP_ID);
     private final HiddenField<String> metaData = new HiddenField<>("metadados", metaDataModel);
 
 
@@ -119,7 +119,7 @@ public class MarkableGoogleMapsPanel<T> extends BSContainer {
 
         if (!multipleMarkers) {
 
-            IModel<SInstance> latitudeModel = new SInstanceValueModel<>(new SInstanceFieldModel<>(model, STypeLatitudeLongitude.FIELD_LATITUDE));
+            IModel<SInstance> latitudeModel  = new SInstanceValueModel<>(new SInstanceFieldModel<>(model, STypeLatitudeLongitude.FIELD_LATITUDE));
             IModel<SInstance> longitudeModel = new SInstanceValueModel<>(new SInstanceFieldModel<>(model, STypeLatitudeLongitude.FIELD_LONGITUDE));
             LoadableDetachableModel<String> googleMapsLinkModel = $m.loadable(() -> {
                 if (latitudeModel.getObject() != null && longitudeModel.getObject() != null) {
@@ -144,10 +144,10 @@ public class MarkableGoogleMapsPanel<T> extends BSContainer {
         } else {
             verNoMaps = new WebMarkupContainer("verNoMaps");
             mapStatic = new ImgMap(MAP_STATIC_ID, $m.loadable(() -> {
-                List<String> makerList = new ArrayList<>();
+                List<String> makerList  = new ArrayList<>();
                 List<LatLng> latLngList = new ArrayList<>();
                 ((SILatitudeLongitudeList) model.getObject()).getPoints().forEach(m -> {
-                    IModel<?> latitude = Model.of(m.getLatitude());
+                    IModel<?> latitude  = Model.of(m.getLatitude());
                     IModel<?> longitude = Model.of(m.getLongitude());
 
                     LatLng latLng = new LatLng(m.getLatitude().doubleValue(), m.getLongitude().doubleValue());
@@ -174,18 +174,18 @@ public class MarkableGoogleMapsPanel<T> extends BSContainer {
     }
 
     private String configureMapToView(List<String> latLngMakerList, IModel<?> zoomModel, List<LatLng> latLngList) {
-        String latLng = "-15.7922, -47.4609";
+        String        latLng = "-15.7922, -47.4609";
         StringBuilder marker = new StringBuilder();
         if (CollectionUtils.isNotEmpty(latLngMakerList)) {
             latLngMakerList.stream()
                     .filter(l -> l != null && !l.isEmpty())
                     .forEach(l -> marker.append("&markers=").append(l));
-            if(StringUtils.isNotEmpty(latLngMakerList.get(0))) {
+            if (StringUtils.isNotEmpty(latLngMakerList.get(0))) {
                 latLng = latLngMakerList.get(0);
             }
         }
 
-        latLng = getMediaOfPoints(latLngList, latLng);
+        latLng = getMeanOfPoints(latLngList, latLng);
 
         StringBuilder parameters = new StringBuilder();
         parameters.append("key=").append(singularKeyMapStatic);
@@ -203,19 +203,20 @@ public class MarkableGoogleMapsPanel<T> extends BSContainer {
         return "https://maps.googleapis.com/maps/api/staticmap?" + parameters.toString();
     }
 
-    private String getMediaOfPoints(List<LatLng> latLngList, String latLng) {
+    private String getMeanOfPoints(List<LatLng> latLngList, String latLng) {
+        String mean = latLng;
         if (CollectionUtils.isNotEmpty(latLngList)) {
-            Model<Double> latModel = new Model<>(new Double(0));
-            Model<Double> lngModel = new Model<>(new Double(0));
+            Model<Double> latModel = new Model<>(Double.valueOf(0));
+            Model<Double> lngModel = new Model<>(Double.valueOf(0));
             latLngList.forEach(l -> {
                 latModel.setObject(latModel.getObject() + l.lat);
                 lngModel.setObject(lngModel.getObject() + l.lng);
             });
             String lat = String.valueOf(latModel.getObject() / latLngList.size());
             String lng = String.valueOf(lngModel.getObject() / latLngList.size());
-            latLng = lat + ", " + lng;
+            mean = lat + ", " + lng;
         }
-        return latLng;
+        return mean;
     }
 
     private void populateMetaData() {
@@ -259,7 +260,7 @@ public class MarkableGoogleMapsPanel<T> extends BSContainer {
         });
 
         Component errorMapStatic = new Label("errorMapStatic", "Não foi encontrada a Key do Google Maps Static no arquivo singular.properties").setVisible(false);
-        Component errorMapJS = new Label("errorMapJS", "Não foi encontrada a Key do Google Maps JS no arquivo singular.properties").setVisible(false);
+        Component errorMapJS     = new Label("errorMapJS", "Não foi encontrada a Key do Google Maps JS no arquivo singular.properties").setVisible(false);
 
         panelErrorMsg.add(errorMapJS, errorMapStatic);
         templatePanel.add(verNoMaps, clearButton, currentLocationButton, map, metaData, mapStatic);
@@ -287,7 +288,7 @@ public class MarkableGoogleMapsPanel<T> extends BSContainer {
         boolean notMultipleAndNotVisualization = !multipleMarkers && !isVisualization();
         clearButton.setVisible(notMultipleAndNotVisualization);
         mapStatic.setVisible(isVisualization());
-        verNoMaps.setVisible(isVisualization() && !multipleMarkers);
+        verNoMaps.setVisible(!multipleMarkers && isVisualization());
     }
 
     @Override
